(split)Finished makefile.

--- a/Source code/Embedded/makefile-build/Makefile
+++ b/Source code/Embedded/makefile-build/Makefile
@@ -1,29 +1,34 @@
 
-RM := rm -rf
-CC := "C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-gcc.exe"
-OBJCOPY := "C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-objcopy.exe"
-OBJDUMP := "C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-objdump.exe"
-AVRSIZE := "C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-size.exe"
+all: hdk_oled hdk_lcd dsight
 
-PATH_CONVERT = $(subst /,\,$1)
-MKDIR_P = if not exist "$(call PATH_CONVERT,$1)" mkdir "$(subst /,\,$1)"
+
+# If the user passed additional DEFINES on the command line, we'll combine those
+# in a hopefully-safe way for display and for appending to the output filename.
+# Of course, if you change the value of DEFINES, you must rebuild the whole thing.
+ifneq ($(strip $(DEFINES)),)
+# the bit with eval is to be able to search for a space.
+SUFFIX := -$(subst $(eval) ,-,$(subst =,_,$(strip $(DEFINES))))
+FN_SUFFIX := $(subst =,_,$(SUFFIX))
+endif
+
+TOOLCHAIN_ROOT := C:/Program Files (x86)/Atmel/Studio/7.0/toolchain/avr8/avr8-gnu-toolchain
+TOOL_EXTENSION := .exe
+CC := "$(TOOLCHAIN_ROOT)/bin/avr-gcc$(TOOL_EXTENSION)"
+OBJCOPY := "$(TOOLCHAIN_ROOT)/bin/avr-objcopy$(TOOL_EXTENSION)"
+OBJDUMP := "$(TOOLCHAIN_ROOT)/bin/avr-objdump$(TOOL_EXTENSION)"
+AVRSIZE := "$(TOOLCHAIN_ROOT)/bin/avr-size$(TOOL_EXTENSION)"
+
+PATH_SEPARATOR = \\
+
+PATH_CONVERT = $(subst /,\\,$1)
+MKDIR_P = @if not exist "$(call PATH_CONVERT,$1)" mkdir "$(call PATH_CONVERT,$1)"
 CP = copy
-#if 0
-#PATH_CONVERT = $1
-#MKDIR_P = mkdir -p "$1"
-#endif
 
-GET_PATH = $(subst /,\,$(dir $1))
-
-#define GET_PATH
-#$(eval OUT_PATH := $(subst /,\,$(dir $1)))
-#$(eval $(info OUT_PATH = $(OUT_PATH)))
-#$(OUT_PATH)
-#endef
+GET_PATH = $(subst /,$(call PATH_CONVERT,$1),$(dir $1))
 
 USER_OBJS :=
 
-LIBS := 
+LIBS :=
 VARIANTS := \
     HDK_OLED \
 	HDK_Sharp_LCD \
@@ -33,85 +38,13 @@ OUTPUT_STEM := HMD_MCU
 OUTPUT_FILE_PATH := $(OUTPUT_STEM).elf
 OUTPUT_MAP := $(OUTPUT_STEM).map
 OUTPUT_HEX := $(OUTPUT_STEM).hex
-	
+
 MCU=atxmega256a3bu
 REL_ROOT := ..
 REL_SRC := $(REL_ROOT)/src
 
 for_each_variant = $(foreach variant,$(VARIANTS),$(variant)/$1)
 
-# Every subdirectory with source files must be described here
-SUBDIRS :=  \
-../src/ \
-../src/ASF/ \
-../src/ASF/common/ \
-../src/ASF/common/boards/ \
-../src/ASF/common/services/ \
-../src/ASF/common/services/clock/ \
-../src/ASF/common/services/clock/xmega/ \
-../src/ASF/common/services/delay/ \
-../src/ASF/common/services/delay/xmega/ \
-../src/ASF/common/services/gpio/ \
-../src/ASF/common/services/gpio/xmega_gpio/ \
-../src/ASF/common/services/ioport/ \
-../src/ASF/common/services/ioport/xmega/ \
-../src/ASF/common/services/serial/ \
-../src/ASF/common/services/serial/xmega_usart/ \
-../src/ASF/common/services/sleepmgr/ \
-../src/ASF/common/services/sleepmgr/xmega/ \
-../src/ASF/common/services/spi/ \
-../src/ASF/common/services/spi/xmega_spi/ \
-../src/ASF/common/services/spi/xmega_usart_spi/ \
-../src/ASF/common/services/twi/ \
-../src/ASF/common/services/twi/xmega_twi/ \
-../src/ASF/common/services/usb/ \
-../src/ASF/common/services/usb/class/ \
-../src/ASF/common/services/usb/class/cdc/ \
-../src/ASF/common/services/usb/class/cdc/device/ \
-../src/ASF/common/services/usb/class/cdc/device/example/ \
-../src/ASF/common/services/usb/class/cdc/device/example/atxmega256a3bu_xmega_a3bu_xplained/ \
-../src/ASF/common/services/usb/class/composite/ \
-../src/ASF/common/services/usb/class/composite/device/ \
-../src/ASF/common/services/usb/class/hid \
-../src/ASF/common/services/usb/class/hid/device \
-../src/ASF/common/services/usb/class/hid/device/generic \
-../src/ASF/common/services/usb/udc/ \
-../src/ASF/common/utils/ \
-../src/ASF/common/utils/interrupt/ \
-../src/ASF/common/utils/make/ \
-../src/ASF/xmega/ \
-../src/ASF/xmega/boards/ \
-../src/ASF/xmega/boards/xmega_a3bu_xplained/ \
-../src/ASF/xmega/drivers/ \
-../src/ASF/xmega/drivers/cpu/ \
-../src/ASF/xmega/drivers/nvm/ \
-../src/ASF/xmega/drivers/pmic/ \
-../src/ASF/xmega/drivers/rtc32/ \
-../src/ASF/xmega/drivers/sleep/ \
-../src/ASF/xmega/drivers/spi/ \
-../src/ASF/xmega/drivers/tc/ \
-../src/ASF/xmega/drivers/twi/ \
-../src/ASF/xmega/drivers/usart/ \
-../src/ASF/xmega/drivers/usb/ \
-../src/ASF/xmega/services/ \
-../src/ASF/xmega/services/pwm/ \
-../src/ASF/xmega/services/timeout/ \
-../src/ASF/xmega/utils/ \
-../src/ASF/xmega/utils/assembler/ \
-../src/ASF/xmega/utils/bit_handling/ \
-../src/ASF/xmega/utils/preprocessor/ \
-../src/config/ \
-../src/DeviceDrivers \
-../src/DeviceDrivers/bno-hostif \
-../src/DeviceDrivers/bno-hostif/src \
-../src/Variants \
-../src/NXP \
-../src/Variants/HDK_OLED \
-../src/Variants/HDK_Sharp_LCD \
-../src/Variants/dSight_Sharp_LCD
-
-
-# Add inputs and outputs from these tool invocations to the build variables 
 C_SRCS :=  \
 src/ASF/common/services/usb/class/composite/device/udi_composite_desc.c \
 src/ASF/common/services/usb/class/hid/device/generic/udi_hid_generic.c \
@@ -161,31 +94,29 @@ src/NXP/tmdlHdmiRx_IW_RTX.c \
 src/SerialStateMachine.c \
 src/uart_xmega.c
 
-
 PREPROCESSING_SRCS :=  \
 src/ASF/xmega/drivers/cpu/ccp.s \
 src/ASF/xmega/drivers/nvm/nvm_asm.s
 
+# Simple lists without a variant subdirectory at the beginning
 BASE_OBJS :=  $(C_SRCS:%.c=%.o) $(PREPROCESSING_SRCS:%.s=%.o)
-
 BASE_C_DEPS := $(C_SRCS:%.c=%.d)
 
+# The above lists, multiplied by the variants.
 OBJS := $(foreach variant,$(VARIANTS),$(addprefix $(variant)/,$(BASE_OBJS)))
 C_DEPS := $(foreach variant,$(VARIANTS),$(addprefix $(variant)/,$(BASE_C_DEPS)))
 
-OBJ_DIRS := $(sort $(dir $(OBJS)))
-OBJ_DIRS := $(subst /,\,$(OBJ_DIRS))
-#$(info $(OBJ_DIRS))
+#OBJ_DIRS := $(subst /,$(PATH_SEPARATOR),$(sort $(dir $(OBJS))))
 
+#ADDITIONAL_DEPENDENCIES:=
 
-ADDITIONAL_DEPENDENCIES:=
+#OUTPUT_FILE_DEP:= ./makedep.mk
 
-OUTPUT_FILE_DEP:= ./makedep.mk
+#LIB_DEP+=
 
-LIB_DEP+= 
+#LINKER_SCRIPT_DEP+=
 
-LINKER_SCRIPT_DEP+= 
-
+# These are the include dirs that come after the variant include dir.
 COMMON_INCLUDE_DIRS = \
 	$(REL_SRC)/ASF/xmega/boards/xmega_a3bu_xplained \
 	$(REL_SRC) \
@@ -228,72 +159,84 @@ COMMON_INCLUDE_DIRS = \
 	$(REL_SRC)/ASF/common/services/usb/class/hid/device/generic \
 	$(REL_SRC)/DeviceDrivers/bno-hostif/src
 
-get_variant=$(word 1,$(subst /, ,$1))
-get_variant_include_dir=$(REL_ROOT)/src/Variants/$(word 1,$(subst /, ,$1))
-make_include_flags=$(patsubst %, -I"%",$1)
-
-DEFINES := CONFIG_NVM_IGNORE_XMEGA_A3_D3_REVB_ERRATA \
+BASE_DEFINES := CONFIG_NVM_IGNORE_XMEGA_A3_D3_REVB_ERRATA \
            IOPORT_XMEGA_COMPAT \
-		   DEBUG \
-		   BOARD=USER_BOARD
+           DEBUG \
+           BOARD=USER_BOARD
 
-COMMON_FLAGS := -mmcu=$(MCU) -mrelax $(patsubst %, -D%,$(DEFINES))
+ALL_DEFINES := $(BASE_DEFINES) $(DEFINES)
+
+
+COMMON_FLAGS := -mmcu=$(MCU) -mrelax $(patsubst %, -D%,$(ALL_DEFINES))
 CFLAGS := -x c $(COMMON_FLAGS)\
           -O3 -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -mrelax -g3 -Wall \
 		  -c -std=gnu99 -fno-strict-aliasing \
 		  -Wstrict-prototypes -Wmissing-prototypes -Werror-implicit-function-declaration -Wpointer-arith
 ASFLAGS := -Wa,-gdwarf2 -x assembler-with-cpp -c $(COMMON_FLAGS)
-OPTIMIZATION = -O3
+OPTIMIZATION := -O3
+
+get_variant=$(word 1,$(subst /, ,$1))
 
 DEBUG_VARIANT = @echo Variant: $(VARIANT)
+
+ifeq ($(strip $(VERBOSE)),)
+QUIETRULE := @
+endif
+
 
 # Pattern for creating directories
 #$(OBJ_DIRS):
 #	-$(call MKDIR_P,$@)
 
 # Pattern for building object files from c
-#$(foreach variant,$(VARIANTS),$(variant)/%.o): $(REL_ROOT)/%.c
-#$(call GET_PATH,$@)
-$(call for_each_variant,%.o): $(REL_ROOT)/%.c 
-	-$(call MKDIR_P,$(@D))
+$(call for_each_variant,%.o): $(REL_ROOT)/%.c
+	@$(call MKDIR_P,$(@D))
 	$(eval VARIANT?=$(call get_variant,$@))
-	$(DEBUG_VARIANT)
-	$(CC)  $(patsubst %, -I"%",$(REL_SRC)/Variants/$(VARIANT) $(COMMON_INCLUDE_DIRS)) $(CFLAGS) $(OPTIMIZATION) -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
+ifeq ($(strip $(VERBOSE)),)
+	@echo [$(VARIANT)$(SUFFIX)] ($(OPTIMIZATION)) : $<
+endif
+	$(QUIETRULE)$(CC)  $(patsubst %, -I"%",$(REL_SRC)/Variants/$(VARIANT) $(COMMON_INCLUDE_DIRS)) $(CFLAGS) $(OPTIMIZATION) -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<"
 
 # Pattern for building object files from .s
 $(call for_each_variant,%.o): $(REL_ROOT)/%.s
-	-$(call MKDIR_P,$(@D))
+	@$(call MKDIR_P,$(@D))
 	$(eval VARIANT?=$(call get_variant,$@))
-	$(DEBUG_VARIANT)
-	$(CC) $(ASFLAGS) $(patsubst %, -I"%",$(REL_SRC)/Variants/$(VARIANT) $(COMMON_INCLUDE_DIRS)) -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)" -Wa,-g -o "$@" "$<"
-	
-# This file needs optimization turned off (set to -O0) - hopefully this will do it.
-$(call for_each_variant,src/DeviceDrivers/bno-hostif/src/sensorhub.o): OPTIMIZATION = -O0
+ifeq ($(strip $(VERBOSE)),)
+	@echo [$(VARIANT)$(SUFFIX)] : $<
+endif
+	$(QUIETRULE)$(CC) $(ASFLAGS) $(patsubst %, -I"%",$(REL_SRC)/Variants/$(VARIANT) $(COMMON_INCLUDE_DIRS)) -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)" -Wa,-g -o "$@" "$<"
 
-#OUTPUT_FILE_PATHS := $(call for_each_variant,$(OUTPUT_FILE_PATH))
+# This file needs optimization turned off (set to -O0) - hopefully this will do it.
+$(call for_each_variant,src/DeviceDrivers/bno-hostif/src/sensorhub.o): override OPTIMIZATION := -O0
 
 # Makes the elf file
 $(call for_each_variant,$(OUTPUT_FILE_PATH)): %/$(OUTPUT_FILE_PATH) : $(addprefix %/,$(BASE_OBJS))
-	-$(call MKDIR_P,$(@D))
+	$(call MKDIR_P,$(@D))
 	$(eval VARIANT?=$(call get_variant,$@))
-	$(DEBUG_VARIANT)
-	@echo output: $@
-	@echo deps: $<
-	$(CC) -o"$@" $(patsubst %,$(VARIANT)/%,$(BASE_OBJS)) $(USER_OBJS) $(LIBS) -Wl,-Map="$(VARIANT)/$(OUTPUT_MAP)" -Wl,--start-group -Wl,-lm  -Wl,--end-group -Wl,--gc-sections -mrelax -mmcu=$(MCU) -Wl,--relax -Wl,--section-start=.BOOT=0x40000
-	$(AVR_SIZE) "$@"
+ifeq ($(strip $(VERBOSE)),)
+	@echo [$(VARIANT)$(SUFFIX)] : Linking $@
+endif
+	$(QUIETRULE)$(CC) -o"$@" $(patsubst %,$(VARIANT)/%,$(BASE_OBJS)) $(USER_OBJS) $(LIBS) -Wl,-Map="$(VARIANT)/$(OUTPUT_MAP)" -Wl,--start-group -Wl,-lm  -Wl,--end-group -Wl,--gc-sections -mrelax -mmcu=$(MCU) -Wl,--relax -Wl,--section-start=.BOOT=0x40000
+	$(QUIETRULE)$(AVRSIZE) --mcu=$(MCU) --format=avr "$@"
 
 
+# Makes the hex file
 $(call for_each_variant,$(OUTPUT_HEX)): %/$(OUTPUT_HEX) : %/$(OUTPUT_FILE_PATH)
-	$(OBJCOPY) -O ihex -R .eeprom -R .fuse -R .lock -R .signature -R .user_signatures "$<" "$@"
-#$(patsubst %,HDK_OLED/,$(BASE_OBJS))
-#%/$(OUTPUT_FILE_PATH): $(foreach obj,$(BASE_OBJS),%/$(obj))
-#$(foreach obj,$(BASE_OBJS),%/$(obj)) 
-#	@echo output: $@
-#	@echo deps: $<
-#$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-gcc.exe$(QUOTE) -o$(OUTPUT_FILE_PATH_AS_ARGS) $(OBJS_AS_ARGS) $(USER_OBJS) $(LIBS) -Wl,-Map="HMD-MCU.map" -Wl,--start-group -Wl,-lm  -Wl,--end-group -Wl,--gc-sections -mrelax -mmcu=atxmega256a3bu -Wl,--relax -Wl,--section-start=.BOOT=0x40000
+ifeq ($(strip $(VERBOSE)),)
+	@echo [$(VARIANT)$(SUFFIX)] : Generating $@
+endif
+	$(QUIETRULE)$(OBJCOPY) -O ihex -R .eeprom -R .fuse -R .lock -R .signature -R .user_signatures "$<" "$@"
+
+# Includes the deps files.
+ifneq ($(MAKECMDGOALS),clean)
+ifneq ($(strip $(C_DEPS)),)
+-include $(C_DEPS)
+endif
+endif
 
 define VARIANT_TOPLEVEL
-	$(CP) $< $@.hex 
+	@$(CP) "$(call PATH_CONVERT,$<)" "$@$(FN_SUFFIX).hex"
+	@echo Generated "$@$(FN_SUFFIX).hex"
 endef
 
 #	"C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-objcopy.exe" -O ihex -R .eeprom -R .fuse -R .lock -R .signature -R .user_signatures  "HMD-MCU.elf" "HMD-MCU.hex"
@@ -301,9 +244,6 @@ endef
 #	"C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-objdump.exe" -h -S "HMD-MCU.elf" > "HMD-MCU.lss"
 #	"C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-objcopy.exe" -j .user_signatures --set-section-flags=.user_signatures=alloc,load --change-section-lma .user_signatures=0 --no-change-warnings -O ihex "HMD-MCU.elf" "HMD-MCU.usersignatures" || exit 0
 #	"C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-size.exe" "HMD-MCU.elf"
-
-all: hdk_oled hdk_lcd dsight
-
 
 hdk_oled: HDK_OLED/$(OUTPUT_HEX)
 	$(call VARIANT_TOPLEVEL)
@@ -313,4 +253,3 @@ dsight: dSight_Sharp_LCD/$(OUTPUT_HEX)
 	$(call VARIANT_TOPLEVEL)
 
 .PHONY: all hdk_oled hdk_lcd dsight
-	
