--- a/Source code/Embedded/makefile-build/Makefile
+++ b/Source code/Embedded/makefile-build/Makefile
@@ -46,21 +46,29 @@ REL_SRC := $(REL_ROOT)/src
 for_each_variant = $(foreach variant,$(VARIANTS),$(variant)/$1)
 
 C_SRCS :=  \
-src/ASF/common/services/usb/class/composite/device/udi_composite_desc.c \
-src/ASF/common/services/usb/class/hid/device/generic/udi_hid_generic.c \
-src/ASF/common/services/usb/class/hid/device/udi_hid.c \
-src/ASF/xmega/drivers/rtc32/rtc32.c \
-src/ASF/xmega/drivers/tc/tc.c \
-src/ASF/xmega/services/pwm/pwm.c \
-src/ASF/xmega/services/timeout/timeout.c \
+src/Boot.c \
+src/Console.c \
+src/FPGA.c \
+src/SerialStateMachine.c \
+src/TimingDebug.c \
+src/USB.c \
+src/main.c \
+src/my_hardware.c \
+src/uart_xmega.c \
+src/NXP/AVRHDMI.c \
+src/NXP/NXP_AVR_Internal.c \
+src/NXP/i2c.c \
+src/NXP/tmbslTDA1997X_functions.c \
+src/NXP/tmdlHdmiRx.c \
+src/NXP/tmdlHdmiRx_IW_RTX.c \
+src/NXP/tmdlHdmiRx_cfg.c \
+src/DeviceDrivers/BNO070_using_hostif.c \
+src/DeviceDrivers/Solomon.c \
+src/DeviceDrivers/TI-TMDS442.c \
 src/DeviceDrivers/bno-hostif/1000-3251_1.7.0.390_avr.c \
 src/DeviceDrivers/bno-hostif/bno_callbacks.c \
 src/DeviceDrivers/bno-hostif/src/sensorhub.c \
 src/DeviceDrivers/bno-hostif/src/sensorhub_hid.c \
-src/DeviceDrivers/BNO070_using_hostif.c \
-src/NXP/NXP_AVR_Internal.c \
-src/TimingDebug.c \
-src/USB.c \
 _StackInstrument.c \
 src/ASF/common/services/clock/xmega/sysclk.c \
 src/ASF/common/services/ioport/xmega/ioport_compat.c \
@@ -70,29 +78,21 @@ src/ASF/common/services/spi/xmega_spi/spi_master.c \
 src/ASF/common/services/spi/xmega_usart_spi/usart_spi.c \
 src/ASF/common/services/usb/class/cdc/device/example/atxmega256a3bu_xmega_a3bu_xplained/ui.c \
 src/ASF/common/services/usb/class/cdc/device/udi_cdc.c \
+src/ASF/common/services/usb/class/composite/device/udi_composite_desc.c \
+src/ASF/common/services/usb/class/hid/device/generic/udi_hid_generic.c \
+src/ASF/common/services/usb/class/hid/device/udi_hid.c \
 src/ASF/common/services/usb/udc/udc.c \
 src/ASF/xmega/boards/xmega_a3bu_xplained/init.c \
 src/ASF/xmega/drivers/nvm/nvm.c \
+src/ASF/xmega/drivers/rtc32/rtc32.c \
 src/ASF/xmega/drivers/spi/spi.c \
+src/ASF/xmega/drivers/tc/tc.c \
 src/ASF/xmega/drivers/twi/twim.c \
 src/ASF/xmega/drivers/twi/twis.c \
 src/ASF/xmega/drivers/usart/usart.c \
 src/ASF/xmega/drivers/usb/usb_device.c \
-src/Boot.c \
-src/Console.c \
-src/DeviceDrivers/Solomon.c \
-src/DeviceDrivers/TI-TMDS442.c \
-src/FPGA.c \
-src/main.c \
-src/my_hardware.c \
-src/NXP/AVRHDMI.c \
-src/NXP/i2c.c \
-src/NXP/tmbslTDA1997X_functions.c \
-src/NXP/tmdlHdmiRx.c \
-src/NXP/tmdlHdmiRx_cfg.c \
-src/NXP/tmdlHdmiRx_IW_RTX.c \
-src/SerialStateMachine.c \
-src/uart_xmega.c
+src/ASF/xmega/services/pwm/pwm.c \
+src/ASF/xmega/services/timeout/timeout.c
 
 PREPROCESSING_SRCS :=  \
 src/ASF/xmega/drivers/cpu/ccp.s \
