(split)Factor out the display interface now.

--- a/Source code/Embedded/makefile-build/Makefile
+++ b/Source code/Embedded/makefile-build/Makefile
@@ -62,6 +62,8 @@ src/NXP/tmbslTDA1997X_functions.c \
 src/NXP/tmdlHdmiRx.c \
 src/NXP/tmdlHdmiRx_IW_RTX.c \
 src/NXP/tmdlHdmiRx_cfg.c \
+src/DeviceDrivers/Display.c \
+src/DeviceDrivers/Display_Solomon.c \
 src/DeviceDrivers/BNO070_using_hostif.c \
 src/DeviceDrivers/Solomon.c \
 src/DeviceDrivers/TI-TMDS442.c \
