(split)Add VideoInput interface.

--- a/Source code/Embedded/makefile-build/Makefile
+++ b/Source code/Embedded/makefile-build/Makefile
@@ -64,6 +64,7 @@ src/NXP/tmdlHdmiRx_IW_RTX.c \
 src/NXP/tmdlHdmiRx_cfg.c \
 src/DeviceDrivers/Display.c \
 src/DeviceDrivers/Display_Solomon.c \
+src/DeviceDrivers/VideoInput_NXP.c \
 src/DeviceDrivers/BNO070_using_hostif.c \
 src/DeviceDrivers/Solomon.c \
 src/DeviceDrivers/TI-TMDS442.c \
